# GarageSystem

./: .gitignore  animation.py  animation_manager.py  animation_player.py  configuration.json  digital_distance_sensor.py  digital_sensor_controller.py  gate_controller.py  gate_manager.py  magnectic_switch_controller.py  main.py  test.json  test_time_to_flight.py  time_to_flight_sensor_controller.py  timer.py  ultrasonic_distance_sensor.py  ultrasonic_sensor_controller.py  utils.py
core/: digital_sensor_client.py  digital_sensor_service_client.py  generate_proto_interface.sh  main.py  ttf_sensor_client.py  utils.py
core/grpc_src/: digital_sensor_api_pb2.py  digital_sensor_api_pb2.pyi  ttf_sensor_api_pb2.py  ttf_sensor_api_pb2.pyi  ttf_sensor_api_pb2_grpc.py
deprecated/: animation.py  animation_controller.py  animation_player.py  digital_sensor_controller.py  gate_controller.py  gate_manager.py  gate_manager_tests.py  magnetic_switch.py  test_time_to_flight.py  ultrasonic_sensor_controller.py
digital_sensor/: README.md  digital_sensor_server.py  digital_sensor_servicer.py  generate_proto_interface.sh  pyrightconfig.json  server.py
digital_sensor/grpc_src/: digital_sensor_api_pb2.py  digital_sensor_api_pb2.pyi  digital_sensor_api_pb2_grpc.py  digital_sensor_api_pb2_grpc.pyi
digital_sensor/proto/: digital_sensor_api.proto
protos/: digital_sensor_api.proto  ttf_sensor_api.proto
ttf_sensor/: CMakeLists.txt  build.sh  generate_proto_interface.sh  main.cpp
ttf_sensor/grpc_src/: ttf_sensor_api.grpc.pb.cc  ttf_sensor_api.grpc.pb.h  ttf_sensor_api.pb.cc  ttf_sensor_api.pb.h
ttf_sensor/include/: Exceptions.hpp  Helpers.hpp  ServerConfiguration.hpp  TTFSensor.hpp  TTFSensorConfiguration.hpp  TTFSensorFactory.hpp  TTFSensorModel.hpp  TTFSensorServer.hpp  TTFSensorServiceImpl.hpp  TTFSensorServicer.hpp  TTFSensorsController.hpp  Utils.hpp  VL53L1XSensor.hpp
ttf_sensor/include/interfaces/: ITTFSensor.hpp
ttf_sensor/proto/: ttf_sensor_api.proto
ttf_sensor/src/: Helpers.cpp  ServerConfiguration.cpp  TTFSensor.cpp  TTFSensorConfiguration.cpp  TTFSensorFactory.cpp  TTFSensorServer.cpp  TTFSensorServicer.cpp  TTFSensorServicerImpl.cpp  TTFSensorsController.cpp  Utils.cpp  VL53L1XSensor.cpp
